--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-tutorial",
+  "name": "joshnassif-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://joshnas.github.io/Portfolio/",
+  "homepage": "http://joshnassif.com/",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "lodash": "^4.17.14",
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "aws s3 sync build/ s3://joshnassif.com",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
