--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "http://joshnassif.com/",
   "dependencies": {
     "gh-pages": "^2.0.1",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.14",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -15,6 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "stop": "taskkill -F -IM node.exe",
     "predeploy": "npm run build",
     "deploy": "aws s3 sync build/ s3://joshnassif.com",
     "build": "react-scripts build",
