--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.9.0",
     "react-modal": "^3.10.1",
     "react-modal-image": "^2.4.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2"
   },
